--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -24,9 +24,11 @@
     background-color: $s-black;
     @include tablet {
         font-size: 1.8rem;
+        margin-top: 1.5rem;
         padding: 0.5rem;
     }
     @include desktop {
+        margin-top: 1rem;
         padding-top: 1rem;
     }
 }
@@ -48,7 +50,8 @@
     z-index: 2;
     background-color: transparent;
     @include tablet {
-        top: 1.6rem;
+        width: 100%;
+        top: 2rem;
         left: 8rem;
     }
     @include desktop {
